--- a/main.html
+++ b/main.html
@@ -1,16 +1,55 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>News Website</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <header>
+        <div class="logo">NewsWeb</div>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#world">World</a></li>
+                <li><a href="#sports">Sports</a></li>
+                <li><a href="#entertainment">Entertainment</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
+    <main>
+        <section class="top-story">
+            <img src="top-story.jpg" alt="Top Story Image">
+            <h1>Top Story Headline</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ut neque felis.</p>
+        </section>
+
+        <section class="news-grid">
+            <article class="news-item">
+                <img src="news1.jpg" alt="News 1">
+                <h2>News Headline 1</h2>
+                <p>Short description of the news story...</p>
+            </article>
+
+            <article class="news-item">
+                <img src="news2.jpg" alt="News 2">
+                <h2>News Headline 2</h2>
+                <p>Short description of the news story...</p>
+            </article>
+
+            <article class="news-item">
+                <img src="news3.jpg" alt="News 3">
+                <h2>News Headline 3</h2>
+                <p>Short description of the news story...</p>
+            </article>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 NewsWeb. All rights reserved.</p>
+    </footer>
 </body>
-
 </html>
